--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,7 @@ log = "0.4.8"
 pretty_env_logger = "0.4.0"
 
 tokio = { version =  "0.2.11", features = ["rt-threaded", "macros"] }
+reqwest = { version = "0.11", features = ["json", "blocking"] }
+serde = { version = "1.0", features = ["derive"] }
+
+once_cell = "1"
